Some fx changes and split codes into packages